Create history service module with logic for storing data into MySQL